# evolution-simulator

./: .gitignore  Cargo.toml  README.md  avg_stats.py  example.chromosome.ron  example.config.ron  generate_stats.py  ks_test.py  mw_test.py
.cargo/: config.toml
Assets/: Config.asset
Assets/Material/: Floor.mat
Assets/Prefabs/: Creature.prefab  Muscle.prefab  Node.prefab
Assets/Scenes/: Main.unity
Assets/Scripts/: BitStringChromosome.cs  CameraController.cs  CreatureChromosome.cs  CreatureController.cs  CreatureCrossover.cs  CreatureFitness.cs  CreatureSampleConfig.cs  CreatureTermination.cs  GeneticAlgorithmRunner.cs  Helpers.cs  LineRenderer.cs  MuscleController.cs  MusclePhenotypeEntity.cs  NodePhenotypeEntity.cs  SampleControllerBase.cs
ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset
UserSettings/: Search.settings
scripts/: avg_stats.py  generate_stats.py  ks_test.py  mw_test.py
src/: config.rs  main.rs
src/arguments/: mod.rs
src/genetic_algorithm/: breedable.rs  constants.rs  creature_chromosome.rs  crossable.rs  genetic_algorightm.rs  mod.rs  muscle_entity.rs  muscle_phenotype.rs  node_entity.rs  node_phenotype.rs  operations.rs  plugin.rs  runner.rs  write_stat.rs
src/prefabs/: creature.rs  mod.rs  muscle.rs  node.rs  plane.rs
src/simulation/: creature.rs  logger.rs  mod.rs  muscle.rs  node.rs  plane.rs  plugin.rs  resources.rs
src/simulation2d/: constants.rs  creature.rs  events.rs  logger.rs  mod.rs  muscle.rs  node.rs  physics.rs  plane.rs  playground.rs  plugin.rs  resources.rs  ui.rs  vec_extension.rs
(+6 files in other folders)
