[package]
name = "evolution_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_fly_camera = "0.7.0"
bevy_rapier3d = "0.11.0"
bevy_prototype_debug_lines = "0.3.2"
