[package]
name = "evolution_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0" }
bevy_prototype_debug_lines = "0.3.2"
rand = "0.8.4"
serde = "1.0.130"
ron = "0.7.0"
structopt = "0.3"
once_cell = "1.8.0"
